# Meteo3

./: .gitignore  CMakeLists.txt  Meteo3.qmlproject  Meteo3.qmlproject.qtds  README.md  qmlmodules
content/: App.qml  CMakeLists.txt  Screen01.ui.qml
content/MViews/: CityListView.ui.qml  CityListViewDelegate.ui.qml  CityListViewModel.qml  WeatherListView.ui.qml  WeatherListViewDelegate.ui.qml  WeatherListViewModel.qml
imports/: CMakeLists.txt
imports/Meteo3/: CMakeLists.txt  qmldir
imports/Meteo3/designer/: plugin.metainfo
src/: import_qml_plugins.h  main.cpp
weather_module/: CMakeLists.txt  apiclient.cpp  apiclient.h  dailyweathermodel.cpp  dailyweathermodel.h  datasource.cpp  datasource.h  enumconverters.h  weatherDTO.h  weatherResources.qrc
